--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ subjects:
 - !lcsh 'Rich people -- Fiction'
 - !lcsh 'Fathers and sons -- Fiction'
 - !lcsh 'Paris (France) -- Fiction'
+- GITenberg
 title: The Lost Child
 url: http://www.gutenberg.org/ebooks/23063
